# Wav2Lip

./: .dockerignore  .gitignore  app.py  audio.py  client.py  dockerfile  inference.py  inference_func.py  pyproject.toml  server.py  upload.py
